<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/fp_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/title"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#333" />

    <TextView
        android:visibility="gone"
        android:id="@+id/fp_tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fp_tv_title"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:gravity="center_horizontal"
        android:text="Description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#999" />

    <TextView
        android:visibility="gone"
        android:id="@+id/fp_tv_empty_dir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fp_tv_desc"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:gravity="center_horizontal"
        android:text="@string/select_empty_dir"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#999" />

    <TextView
        android:id="@+id/fp_tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/fp_tv_empty_dir"
        android:layout_toLeftOf="@id/btn_edit_location"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="left"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Location"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#333" />

    <ImageButton
        android:id="@+id/btn_edit_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/fp_tv_empty_dir"
        android:padding="5dp"
        android:background="@android:color/transparent"
        android:onClick="edit"
        android:src="@android:drawable/ic_menu_edit"/>

    <LinearLayout
        android:id="@+id/fp_buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fp_tv_location"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5sp">

        <TextView
            android:visibility="gone"
            style="@style/ToolButtons"
            android:id="@+id/fp_btn_home"
            android:drawableTop="@drawable/fp_ic_action_home"
            android:onClick="home"
            android:text="@string/home" />

        <TextView
            style="@style/ToolButtons"
            android:drawableTop="@drawable/fp_ic_action_up"
            android:onClick="goBack"
            android:text="@string/up" />

        <TextView
            style="@style/ToolButtons"
            android:id="@+id/fp_btn_new"
            android:drawableTop="@drawable/fp_ic_action_add"
            android:onClick="newFolderDialog"
            android:text="@string/neww" />

        <TextView
            style="@style/ToolButtons"
            android:id="@+id/fp_btn_select"
            android:drawableTop="@drawable/fp_ic_action_back"
            android:onClick="select"
            android:text="@string/select" />

        <TextView
            style="@style/ToolButtons"
            android:drawableTop="@drawable/fp_ic_action_cancel"
            android:onClick="cancel"
            android:text="@string/cancel" />

    </LinearLayout>

    <ListView
        android:id="@+id/fp_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fp_buttonsLayout" />

</RelativeLayout>
